various UI updates and configuration changes

--- a/src/Wizard/wizard.sass
+++ b/src/Wizard/wizard.sass
@@ -229,4 +229,9 @@
     .c-form-group.contact-input .c-form-label {
         text-align: left;
     }
+
+    .invalid{
+        color: red;
+        margin-top: 5px;
+    }
 }
